--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <p>10 Million+ Views | 60+ Paid Commissions</p>
     </section>
 
+    <!-- About Section -->
     <section id="about">
         <h2>About Me</h2>
         <p>With six years of videography, cinematography, and post-production experience, my work has amassed over 10 million views across platforms.</p>
