--- a/index.html
+++ b/index.html
@@ -11,36 +11,39 @@
 
     <!-- Hero Section -->
     <section id="hero">
-        <h1>Jaden Liu</h1>
-        <p>Videographer | Editor | Content Creator</p>
-        <p>10 Million+ Views | 60+ Paid Commissions</p>
+        <div class="hero-text">
+            <h1>Jaden Liu</h1>
+            <p>Videographer | Editor | Content Creator</p>
+            <p>10 Million+ Views | 60+ Paid Commissions</p>
+        </div>
     </section>
 
     <!-- About Section -->
-    <section id="about">
+    <section id="about" class="section">
         <h2>About Me</h2>
-        <p>With six years of videography, cinematography, and post-production experience, my work has amassed over 10 million views across platforms.</p>
-        <p>Expert in Sony VEGAS Pro, Adobe After Effects, and more.</p>
+        <p>With six years of videography, cinematography, and post-production experience, my work has amassed over 10 million views across platforms. I am skilled in Sony VEGAS Pro, Adobe After Effects, and other industry-standard tools.</p>
     </section>
 
     <!-- Portfolio Section -->
-    <section id="portfolio">
+    <section id="portfolio" class="section">
         <h2>Portfolio</h2>
-        <div class="portfolio-item">Minecraft Survival Series - NorCal Sumo</div>
-        <div class="portfolio-item">Fortnite Highlights - Devour Nawtaw</div>
-        <div class="portfolio-item">Air Force Baseball Cinematography - USAFA</div>
+        <div class="portfolio-grid">
+            <div class="portfolio-item">Minecraft Survival Series - NorCal Sumo</div>
+            <div class="portfolio-item">Fortnite Highlights - Devour Nawtaw</div>
+            <div class="portfolio-item">Air Force Baseball Cinematography - USAFA</div>
+        </div>
     </section>
 
     <!-- Experience Section -->
-    <section id="experience">
+    <section id="experience" class="section">
         <h2>Experience</h2>
-        <p><strong>Devious Esports LLC</strong> - Lead Editor (July 2020 - June 2021)</p>
-        <p><strong>Overtime Gaming</strong> - Intern (April 2021)</p>
-        <p><strong>USAFA</strong> - Videographer (August 2022 - Present)</p>
+        <div class="experience-item"><strong>Devious Esports LLC</strong> - Lead Editor (July 2020 - June 2021)</div>
+        <div class="experience-item"><strong>Overtime Gaming</strong> - Intern (April 2021)</div>
+        <div class="experience-item"><strong>USAFA</strong> - Videographer (August 2022 - Present)</div>
     </section>
 
     <!-- Awards Section -->
-    <section id="awards">
+    <section id="awards" class="section">
         <h2>Awards & Recognition</h2>
         <ul>
             <li>1st Place - Astral Editing Competition ("Goodbyes")</li>
@@ -50,9 +53,9 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact">
+    <section id="contact" class="section">
         <h2>Contact</h2>
-        <p>Email: jadenliu@projectcodered.com</p>
+        <p>Email: <a href="mailto:jadenliu@projectcodered.com">jadenliu@projectcodered.com</a></p>
     </section>
 
 </body>
