--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
 
-    <!-- Hero Section -->
+    <!-- Hero Section with Background Animation -->
     <section id="hero">
+        <div class="overlay"></div>
         <div class="hero-text">
             <h1>Jaden Liu</h1>
             <p>Videographer | Editor | Content Creator</p>
@@ -18,13 +19,13 @@
         </div>
     </section>
 
-    <!-- About Section -->
+    <!-- About Section with Dividers -->
     <section id="about" class="section">
         <h2>About Me</h2>
-        <p>With six years of videography, cinematography, and post-production experience, my work has amassed over 10 million views across platforms. I am skilled in Sony VEGAS Pro, Adobe After Effects, and other industry-standard tools.</p>
+        <p>With six years of videography, cinematography, and post-production experience, my work has amassed over 10 million views across platforms. Skilled in Sony VEGAS Pro, Adobe After Effects, and other industry-standard tools.</p>
     </section>
 
-    <!-- Portfolio Section -->
+    <!-- Portfolio Section with Enhanced Grid -->
     <section id="portfolio" class="section">
         <h2>Portfolio</h2>
         <div class="portfolio-grid">
@@ -34,12 +35,12 @@
         </div>
     </section>
 
-    <!-- Experience Section -->
+    <!-- Experience Section with Icons -->
     <section id="experience" class="section">
         <h2>Experience</h2>
-        <div class="experience-item"><strong>Devious Esports LLC</strong> - Lead Editor (July 2020 - June 2021)</div>
-        <div class="experience-item"><strong>Overtime Gaming</strong> - Intern (April 2021)</div>
-        <div class="experience-item"><strong>USAFA</strong> - Videographer (August 2022 - Present)</div>
+        <div class="experience-item"><span>🎥</span><strong>Devious Esports LLC</strong> - Lead Editor (July 2020 - June 2021)</div>
+        <div class="experience-item"><span>🎞️</span><strong>Overtime Gaming</strong> - Intern (April 2021)</div>
+        <div class="experience-item"><span>📽️</span><strong>USAFA</strong> - Videographer (August 2022 - Present)</div>
     </section>
 
     <!-- Awards Section -->
