--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -29,9 +28,9 @@
     <section id="portfolio" class="section">
         <h2>Portfolio</h2>
         <div class="portfolio-grid">
-            <div class="portfolio-item">Minecraft Survival Series - NorCal Sumo</div>
-            <div class="portfolio-item">Fortnite Highlights - Devour Nawtaw</div>
-            <div class="portfolio-item">Air Force Baseball Cinematography - USAFA</div>
+            <div class="portfolio-item"><a href="https://www.youtube.com/watch?v=R5eiV_MIjiQ" target="_blank">Minecraft Survival Series - NorCal Sumo</a></div>
+            <div class="portfolio-item"><a href="https://www.youtube.com/watch?v=R5eiV_MIjiQ" target="_blank">Fortnite Highlights - Devour Nawtaw</a></div>
+            <div class="portfolio-item"><a href="https://www.youtube.com/watch?v=R5eiV_MIjiQ" target="_blank">Air Force Baseball Cinematography - USAFA</a></div>
         </div>
     </section>
 
