--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <section id="portfolio" class="section">
         <h2>Portfolio</h2>
         <div class="portfolio-grid">
-            <div class="portfolio-item"><a href="https://www.youtube.com/watch?v=R5eiV_MIjiQ" target="_blank">Minecraft Survival Series - NorCal Sumo</a></div>
-            <div class="portfolio-item"><a href="https://www.youtube.com/watch?v=R5eiV_MIjiQ" target="_blank">Fortnite Highlights - Devour Nawtaw</a></div>
+            <div class="portfolio-item"><a href="https://www.youtube.com/watch?v=iq75ko0BrBM" target="_blank">Minecraft Survival Series - NorCal Sumo</a></div>
+            <div class="portfolio-item"><a href="https://www.youtube.com/watch?v=BliIVHI-g6s" target="_blank">Fortnite Highlights - Devour Nawtaw</a></div>
             <div class="portfolio-item"><a href="https://www.youtube.com/watch?v=R5eiV_MIjiQ" target="_blank">Air Force Baseball Cinematography - USAFA</a></div>
         </div>
     </section>
