--- a/index.html
+++ b/index.html
@@ -29,9 +29,21 @@
     <section id="portfolio" class="section">
         <h2>Portfolio</h2>
         <div class="portfolio-grid">
-            <div class="portfolio-item"><a href="https://www.youtube.com/watch?v=iq75ko0BrBM" target="_blank">Minecraft Survival Series - NorCal Sumo</a></div>
-            <div class="portfolio-item"><a href="https://www.youtube.com/watch?v=BliIVHI-g6s" target="_blank">Fortnite Highlights - Devour Nawtaw</a></div>
-            <div class="portfolio-item"><a href="https://www.youtube.com/watch?v=R5eiV_MIjiQ" target="_blank">Air Force Baseball Cinematography - USAFA</a></div>
+            <div class="portfolio-item">
+                <a href="https://www.youtube.com/watch?v=iq75ko0BrBM" target="_blank">
+                    <h3>Minecraft Survival Series - NorCal Sumo</h3>
+                </a>
+            </div>
+            <div class="portfolio-item">
+                <a href="https://www.youtube.com/watch?v=BliIVHI-g6s" target="_blank">
+                    <h3>Fortnite Highlights - Devour Nawtaw</h3>
+                </a>
+            </div>
+            <div class="portfolio-item">
+                <a href="https://www.youtube.com/watch?v=R5eiV_MIjiQ" target="_blank">
+                    <h3>Air Force Baseball Cinematography - USAFA</h3>
+                </a>
+            </div>
         </div>
     </section>
 
