--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jaden Liu - Videography Profile</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -19,10 +19,10 @@
         </div>
     </section>
 
-    <!-- About Section with Dividers -->
+    <!-- About Section -->
     <section id="about" class="section">
         <h2>About Me</h2>
-        <p>With six years of videography, cinematography, and post-production experience, my work has amassed over 10 million views across platforms. Skilled in Sony VEGAS Pro, Adobe After Effects, and other industry-standard tools.</p>
+        <p>I am a passionate videographer with six years of experience in creating compelling visual stories. My work has garnered over 10 million views across various platforms, showcasing my ability to connect with audiences through captivating visuals and narratives.</p>
     </section>
 
     <!-- Portfolio Section with Enhanced Grid -->
@@ -47,12 +47,12 @@
         </div>
     </section>
 
-    <!-- Experience Section with Icons -->
+    <!-- Experience Section -->
     <section id="experience" class="section">
         <h2>Experience</h2>
-        <div class="experience-item"><span>🎥</span><strong>Devious Esports LLC </strong> - Lead Editor (July 2020 - June 2021)</div>
-        <div class="experience-item"><span>🎞️</span><strong>Overtime Gaming </strong> - Intern (April 2021)</div>
-        <div class="experience-item"><span>📽️</span><strong>USAFA </strong> - Videographer (August 2022 - Present)</div>
+        <div class="experience-item"><span>🎥</span><strong>Devious Esports LLC</strong> - Lead Editor (July 2020 - June 2021)</div>
+        <div class="experience-item"><span>🎞️</span><strong>Overtime Gaming</strong> - Intern (April 2021)</div>
+        <div class="experience-item"><span>📽️</span><strong>USAFA</strong> - Videographer (August 2022 - Present)</div>
     </section>
 
     <!-- Awards Section -->
