--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- Portfolio Section with Enhanced Grid -->
     <section id="portfolio" class="section">
-        <h2>Portfolio</h2>
+        <h2>Projects</h2><p>Explore my visual storytelling work.</p>
         <div class="portfolio-grid">
             <div class="portfolio-item">
                 <a href="https://www.youtube.com/watch?v=iq75ko0BrBM" target="_blank">
