--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
         <div class="portfolio-grid">
             <div class="portfolio-item">
                 <a href="https://www.youtube.com/watch?v=iq75ko0BrBM" target="_blank">
-                    <h3>Minecraft Survival Series - NorCal Sumo</h3>
+                    <img src="https://source.unsplash.com/random/300x300?video" alt="Project Thumbnail">
+                    <div class="overlay">
+                        <h3>Minecraft Survival Series - NorCal Sumo</h3>
+                    </div>
                 </a>
             </div>
             <div class="portfolio-item">
