--- a/index.html
+++ b/index.html
@@ -27,14 +27,11 @@
 
     <!-- Portfolio Section with Enhanced Grid -->
     <section id="portfolio" class="section">
-        <h2>Projects</h2><p>Explore my visual storytelling work.</p>
+        <h2>Portfolio</h2>
         <div class="portfolio-grid">
             <div class="portfolio-item">
                 <a href="https://www.youtube.com/watch?v=iq75ko0BrBM" target="_blank">
-                    <img src="https://source.unsplash.com/random/300x300?video" alt="Project Thumbnail">
-                    <div class="overlay">
-                        <h3>Minecraft Survival Series - NorCal Sumo</h3>
-                    </div>
+                    <h3>Minecraft Survival Series - NorCal Sumo</h3>
                 </a>
             </div>
             <div class="portfolio-item">
