--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="overlay"></div>
         <div class="hero-text">
             <h1>Jaden Liu</h1>
-            <p>Videographer | Editor | Content Creator</p>
+            <p>Videographer | Editor | Post-Producer</p>
             <p>10 Million+ Views | 60+ Paid Commissions</p>
         </div>
     </section>
@@ -50,9 +50,9 @@
     <!-- Experience Section with Icons -->
     <section id="experience" class="section">
         <h2>Experience</h2>
-        <div class="experience-item"><span>🎥</span><strong>Devious Esports LLC</strong> - Lead Editor (July 2020 - June 2021)</div>
-        <div class="experience-item"><span>🎞️</span><strong>Overtime Gaming</strong> - Intern (April 2021)</div>
-        <div class="experience-item"><span>📽️</span><strong>USAFA</strong> - Videographer (August 2022 - Present)</div>
+        <div class="experience-item"><span>🎥</span><strong>Devious Esports LLC </strong> - Lead Editor (July 2020 - June 2021)</div>
+        <div class="experience-item"><span>🎞️</span><strong>Overtime Gaming </strong> - Intern (April 2021)</div>
+        <div class="experience-item"><span>📽️</span><strong>USAFA </strong> - Videographer (August 2022 - Present)</div>
     </section>
 
     <!-- Awards Section -->
