--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h2>Experience</h2>
         <div class="experience-item"><span>🎥</span><strong>Devious Esports LLC:&nbsp;</strong>Lead Editor (July 2020 - June 2021)</div>
         <div class="experience-item"><span>🎞️</span><strong>Overtime Gaming:&nbsp;</strong>Intern (April 2021)</div>
-        <div class="experience-item"><span>📽️</span><strong>USAFA:&nbsp;</strong>Videographer (August 2022 - Present)</div>
+        <div class="experience-item"><span>📽️</span><strong>United States Air Force Academy:&nbsp;</strong>Videographer (August 2022 - Present)</div>
     </section>
 
     <!-- Awards Section -->
