--- a/works.html
+++ b/works.html
@@ -1617,33 +1617,19 @@
     }
   }
 
-</style><div class="fluid-engine fe-6562685e333b46433876fdb2"><div class="fe-block fe-block-c7ae409e8bf249b88f7a"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-c7ae409e8bf249b88f7a"><div class="sqs-block-content">
-
-<div class="sqs-html-content">
-  <h2 style="white-space:pre-wrap;">AIR FORCE</h2><p class="" style="white-space:pre-wrap;">Sports videograph for the United States Air Force Academy</p>
+</style>
+<div class="fluid-engine fe-6562685e333b46433876fdb2">
+  <div class="fe-block fe-block-c7ae409e8bf249b88f7a">
+    <div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-c7ae409e8bf249b88f7a">
+      <div class="sqs-block-content">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/wkswlQ6vIp4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  
-  
+<div class="sqs-html-content">
+  <h2 style="white-space:pre-wrap;">AIR FORCE</h2><p class="" style="white-space:pre-wrap;">Sports videography for the United States Air Force Academy</p>
+</div>
 
 
 
