--- a/works.html
+++ b/works.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <base href="">
 <meta charset="utf-8" />
-<title>Videography</title>
+<title>Jaden Liu | Featured Works</title>
 <meta http-equiv="Accept-CH" content="Sec-CH-UA-Platform-Version, Sec-CH-UA-Model" /><link rel="icon" type="image/x-icon" href="https://images.squarespace-cdn.com/content/v1/5f09de40e8d6a07b5cc9df93/e61ab355-8a48-4924-9144-a4c120c49aca/favicon.ico?format=100w"/>
 <link rel="canonical" href="https://www.7ribe.net/works/videography"/>
 <meta property="og:site_name" content="Savannah"/>
@@ -1630,8 +1630,7 @@
 </div>
 
 <div class="fe-block fe-block-a2e6a7bd047b3e0adeaa">
-    <div>
-    </div>
+
   <div class="sqs-block video-block sqs-block-video" 
        data-block-json="&#123;&quot;blockAnimation&quot;:&quot;none&quot;,&quot;layout&quot;:&quot;caption-hidden&quot;,&quot;overlay&quot;:false,&quot;description&quot;:&#123;&#125;,&quot;isOldBlock&quot;:false,&quot;html&quot;:&quot;&lt;iframe width=\&quot;200\&quot; height=\&quot;113\&quot; src=\&quot;https://www.youtube.com/embed/wkswlQ6vIp4&amp;feature=oembed\&quot; frameborder=\&quot;0\&quot; allow=\&quot;accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\&quot; allowfullscreen title=\&quot;AIR FORCE &#124; Sports Videography\&quot;&gt;&lt;/iframe&gt;&quot;,&quot;url&quot;:&quot;https://www.youtube.com/watch?v=wkswlQ6vIp4&quot;,&quot;width&quot;:200,&quot;height&quot;:113,&quot;providerName&quot;:&quot;YouTube&quot;,&quot;thumbnailUrl&quot;:&quot;https://i.ytimg.com/vi/wkswlQ6vIp4/hqdefault.jpg&quot;,&quot;resolvedBy&quot;:&quot;youtube&quot;&#125;" 
        data-block-type="32" 
